# ipv6-over-ble-borderrouter

./: .gitignore  .gitmodules  KernelConfig.sh  LICENSE  README.md  buildKernel.sh  copy2sd.sh
BLEd/: BLEd.service  CMakeLists.txt  README.md  buildRPi.sh  buildRemote.sh  installDaemon.sh  main.cpp
BLEd/configs/: bled_config.conf
BLEd/src/: BLEHelper.cpp  BLEHelper.h  ConfigHandler.cpp  ConfigHandler.h  Defines.h  HwAddress.cpp  HwAddress.h  ICommand.cpp  ICommand.h  InteractionInterface.cpp  InteractionInterface.h  Logger.cpp  Logger.h  Node.cpp  Node.h  NodeMappings.cpp  NodeMappings.h  NodesHandler.cpp  NodesHandler.h  UtilityFunctions.cpp  UtilityFunctions.h  node_message.proto
BLEd/src/HCICore/: ConnectionGenrator.cpp  ConnectionGenrator.h  HCIInterface.cpp  HCIInterface.h  LECommand.cpp  LEScan.cpp
BLEd/src/proto/: node_message.pb.cc  node_message.pb.h
BLEd/src/proto_old/: node_message.pb.cc  node_message.pb.h
linux/: Module.symvers  README.md  System.map
linux/include/config/: auto.conf.cmd  kernel.release
linux/include/net/bluetooth/: hci_core.h
linux/net/bluetooth/: CMakeLists.txt  hci_conn.c
linux_4_19/include/config/: auto.conf  tristate.conf
linux_4_19/net/bluetooth/: 6lowpan.c  l2cap_core.c  scantest.cpp
scripts/: connectDevice.sh  pingDevices.sh  toLocalLinkAdress.sh
tools/ConnUpdateGenerator/: CMakeLists.txt  main.cpp
